# Graphiti-Knowledge-Graph

./: .env.test_verification  .gitignore  CLAUDE.md  CLEANUP_SUMMARY.md  HOOKS_AND_SKILLS_AUDIT.md  OH_MY_CLAUDE_COMPARISON.md  QUICK_COMPARISON.txt  README.md  graphiti_hook_timing_test.py  pyproject.toml  test_retry.py
.claude/: settings.json
.claude/rules/: mcp-server.md
.planning/: MILESTONES.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md
.planning/milestones/: v1.0-MILESTONE-AUDIT.md  v1.0-REQUIREMENTS.md  v1.0-ROADMAP.md
.planning/research/: ARCHITECTURE.md  FEATURES.md  STACK.md  SUMMARY.md
config/: llm.toml
scripts/: verify_all.py  verify_phase_02.py  verify_phase_06.py  verify_phase_07.py  verify_phase_71.py
src/capture/: __init__.py  batching.py  conversation.py  git_capture.py  git_worker.py  relevance.py  summarizer.py
src/cli/: __init__.py  input.py  output.py  utils.py
src/config/: __init__.py  paths.py  security.py
src/gitops/: __init__.py  autoheal.py  checkpoint.py  compact.py  config.py  hooks.py  journal.py  lfs.py  replay.py
src/graph/: __init__.py  adapters.py  service.py
src/hooks/: __init__.py  installer.py  manager.py
src/indexer/: __init__.py  extraction.py  indexer.py  quality_gate.py  state.py
src/llm/: __init__.py  client.py  config.py  queue.py  quota.py
src/mcp_server/: __init__.py  context.py  install.py  server.py  tools.py  toon_utils.py
src/models/: __init__.py  context.py  security.py
src/queue/: __init__.py  detector.py  models.py  storage.py  worker.py
tests/: __init__.py  test_cli_commands.py  test_cli_foundation.py  test_llm_client.py  test_llm_config.py  test_llm_integration.py  test_llm_queue.py  test_llm_quota.py  test_queue_worker_dispatch.py  test_security.py  test_storage.py
(+221 files in other folders)
