[project]
name = "graphiti-knowledge-graph"
version = "0.1.0"
description = "Dual-scope knowledge graph system with global preferences and project-specific memory"
requires-python = ">=3.12"
dependencies = [
    "kuzu==0.11.3",
    "graphiti-core[kuzu]==0.26.3",
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
